added models & first controller
